--- a/HaveBeenTenseQuestion.html
+++ b/HaveBeenTenseQuestion.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="ja">
+
 <head>
-<meta charset="utf-8"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap" rel="stylesheet"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<style>
+    <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&amp;display=swap"
+        rel="stylesheet" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <style>
         body {
             background-color: #f4f4f4;
             font-family: "Noto Sans JP", sans-serif;
@@ -66,43 +68,50 @@
             margin-right: 15px;
         }
     </style>
-<title>Flash Card</title>
+    <title>Flash Card</title>
 </head>
+
 <body>
-<div class="first-screen" id="fourth-page" style="display: block;">
-<div style="display: flex; justify-content: space-between; align-items: center;">
-<p id="chapter42" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">第5章42</p>
-<img class="icon" onclick="goFirst()" src="img/menu.png"/>
-</div>
-<div id="japanese_content" onclick="goEnglishContent()" style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
-<div class="content-item">
-<div>
-<p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="main_content" style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
+    <div class="first-screen" id="fourth-page" style="display: block;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <p id="chapter42" style="color: #05a5a9; font-size: 36px; font-weight: 700; margin: 0px;margin-left: 10px;">
+                第5章42</p>
+            <img class="icon" onclick="goFirst()" src="img/menu.png" />
+        </div>
+        <div id="japanese_content" onclick="goEnglishContent()"
+            style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
+            <div class="content-item">
+                <div>
+                    <p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="main_content"
+                        style="color: black; font-size: 20px; font-weight: 600; margin: 0px; text-align: center;">
                         一日中勉強してるの？</p>
-</div>
-</div>
-</div>
-<div id="english_content" style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
-<div class="content-item" onclick="goJapaneseContent()">
-<div>
-<p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
+                </div>
+            </div>
+        </div>
+        <div id="english_content"
+            style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
+            <div class="content-item" onclick="goJapaneseContent()">
+                <div>
+                    <p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
                         1/10</p>
-</div>
-<div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
-<p id="english_main_content" style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
+                </div>
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
+                    <p id="english_main_content"
+                        style="color: black; font-size: 20px; font-weight: 500; margin: 0px; text-align: center;">
                         You've been studying all day?</p>
-</div>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
-<audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-<div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
-<audio controls="True" id="audioAnswer" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
-</div>
-</div>
+                </div>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px; z-index: 2;">
+                <audio controls="True" id="audioBtn" src="audio/answer.mp3" style="width: 250px; height: 30px;"></audio>
+            </div>
+            <div style="position: absolute; bottom: 0px;left: 10px;z-index: 1;">
+                <audio controls="True" id="audioAnswer" src="audio/answer.mp3"
+                    style="width: 250px; height: 30px;"></audio>
+            </div>
+        </div>
         <div id="available_content"
             style="justify-content: center; align-items: center; margin-top: 20px; display: none;">
             <p id="available_sentence"
@@ -110,48 +119,55 @@
                 ※特定のカフェの話をしていないのでa cafeとなる。</p>
         </div>
         <div id="success_content" style="display: none;">
-<div class="content-item" style="position: relative;">
-<img src="img/success.PNG" style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;"/>
-<img src="img/flower_left.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;"/>
-<img src="img/flower_right.png" style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;"/>
-</div>
-</div>
-<div id="button_group" style="position: relative; margin-top: 20px; display: none;">
-<img id="leftArrow" src="img/left-arrow.PNG" style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;"/>
-<img id="rightArrow" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-<div id="button_side" style="position: relative; margin-top: 20px; display: none;">
-<button onclick="goLink()" style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
-<img onclick="goNextPart()" src="img/right-arrow.PNG" style="width: 50px; height: 30px;position: absolute; right: 0px;"/>
-</div>
-</div>
+            <div class="content-item" style="position: relative;">
+                <img src="img/success.PNG"
+                    style="width: 200px; height: 120px;position: absolute; bottom: 80px;left: 50px;" />
+                <img src="img/flower_left.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;left: 10px;" />
+                <img src="img/flower_right.png"
+                    style="width: 70px; height: 70px;position: absolute; bottom: 0px;right: 10px;" />
+            </div>
+        </div>
+        <div id="button_group" style="position: relative; margin-top: 20px; display: none;">
+            <img id="leftArrow" src="img/left-arrow.PNG"
+                style="width: 50px; height: 30px; position: absolute; left: 0px; display: block;" />
+            <img id="rightArrow" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+        <div id="button_side" style="position: relative; margin-top: 20px; display: none;">
+            <button onclick="goLink()"
+                style="position: absolute; left: 0px; display: block; margin: 0px;">問題を修了する</button>
+            <img onclick="goNextPart()" src="img/right-arrow.PNG"
+                style="width: 50px; height: 30px;position: absolute; right: 0px;" />
+        </div>
+    </div>
 </body>
 <script>
-const japaneseModelContent = {
-    "1/10": "一日中勉強してるの？",
-    "2/10": "ずっと家の掃除してるの？",
-    "3/10": "最近ずっと体調は大丈夫？",
-    "4/10": "ずっと彼のこと待ってるの？",
-    "5/10": "ここにずっと住んでるの？",
-    "6/10": "それについてずっと考えてるの？",
-    "7/10": "最近運動してるの？",
-    "8/10": "最近気分はいい？",
-    "9/10": "最近ストレス溜まってるの？",
-    "10/10": "健康的な食事してる？"
-};
+    const japaneseModelContent = {
+        "1/10": "一日中勉強してるの？",
+        "2/10": "ずっと家の掃除してるの？",
+        "3/10": "最近ずっと体調は大丈夫？",
+        "4/10": "ずっと彼のこと待ってるの？",
+        "5/10": "ここにずっと住んでるの？",
+        "6/10": "それについてずっと考えてるの？",
+        "7/10": "最近運動してるの？",
+        "8/10": "最近気分はいい？",
+        "9/10": "最近ストレス溜まってるの？",
+        "10/10": "健康的な食事してる？"
+    };
 
-const englishModelContent = {
-    "1/10": "You've been studying all day?",
-    "2/10": "You've been cleaning the house?",
-    "3/10": "You've been feeling okay lately?",
-    "4/10": "You've been waiting for him?",
-    "5/10": "You've been living here for a long time?",
-    "6/10": "You've been thinking about it?",
-    "7/10": "You've been exercising lately?",
-    "8/10": "You've been feeling good?",
-    "9/10": "You've been feeling stressed out lately?",
-    "10/10": "You've been eating healthy?"
-};
+    const englishModelContent = {
+        "1/10": "You've been studying all day?",
+        "2/10": "You've been cleaning the house?",
+        "3/10": "You've been feeling okay lately?",
+        "4/10": "You've been waiting for him?",
+        "5/10": "You've been living here for a long time?",
+        "6/10": "You've been thinking about it?",
+        "7/10": "You've been exercising lately?",
+        "8/10": "You've been feeling good?",
+        "9/10": "You've been feeling stressed out lately?",
+        "10/10": "You've been eating healthy?"
+    };
 
 
 
@@ -201,7 +217,15 @@ const englishModelContent = {
     function goEnglishContent() {
         englishContent.style.display = 'block';
         japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+        availableContent.style.display = 'none';
+        if (contentOrder.textContent == '3/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※feeling goodでもOK。"
+        }
+        if (contentOrder.textContent == '4/10') {
+            availableContent.style.display = 'block';
+            availableSentence.textContent = "※for a long timeはあってもなくてもOK。"
+        }
         buttonGroup.style.display = 'block';
         englishContentOrder.textContent = contentOrder.textContent;
         englishMainContent.textContent = englishModelContent[contentOrder.textContent];
@@ -212,7 +236,7 @@ availableContent.style.display = 'none';
     function goJapaneseContent() {
         if (isClicked == 0) {
             englishContent.style.display = 'none';
-            japaneseContent.style.display = 'block';            
+            japaneseContent.style.display = 'block';
             availableContent.style.display = 'none';
 
             buttonGroup.style.display = 'none';
@@ -238,7 +262,7 @@ availableContent.style.display = 'none';
 
     }
 
-        function goNext() {
+    function goNext() {
         availableContent.style.display = 'none';
         clickCount++;
         let arrayOrder = 0;
@@ -250,8 +274,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -266,8 +290,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(50%) rotate(30deg)'
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 successCount++;
                 englishContent.style.opacity = '1';
@@ -279,7 +303,7 @@ availableContent.style.display = 'none';
                 setTimeout(() => {
                     englishContent.style.display = 'none';
                     japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                    availableContent.style.display = 'none';
                     successContent.style.display = 'block';
                     buttonGroup.style.display = 'none';
                     buttonSide.style.display = 'block';
@@ -294,7 +318,7 @@ availableContent.style.display = 'none';
             setTimeout(() => {
                 englishContent.style.display = 'none';
                 japaneseContent.style.display = 'none';
-availableContent.style.display = 'none';
+                availableContent.style.display = 'none';
                 buttonGroup.style.display = 'none';
                 successContent.style.display = 'block';
                 buttonSide.style.display = 'block';
@@ -330,8 +354,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -344,8 +368,8 @@ availableContent.style.display = 'none';
                 englishContent.style.transform = 'translateX(-50%) rotate(-30deg)'
                 setTimeout(() => {
                     englishContent.style.display = 'none';
-                    japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                    japaneseContent.style.display = 'block';
+                    availableContent.style.display = 'none';
 
                     englishContent.style.opacity = '1';
                     englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -360,8 +384,8 @@ availableContent.style.display = 'none';
             englishContent.style.transform = 'translateX(-50%) rotate(-30deg)';
             setTimeout(() => {
                 englishContent.style.display = 'none';
-                japaneseContent.style.display = 'block';            
-            availableContent.style.display = 'none';
+                japaneseContent.style.display = 'block';
+                availableContent.style.display = 'none';
 
                 englishContent.style.opacity = '1';
                 englishContent.style.transform = 'translateX(0) rotate(0deg)';
@@ -450,4 +474,5 @@ availableContent.style.display = 'none';
     }
 
 </script>
+
 </html>
